--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>KASHAN - FULL STACK WEB DEVELOPER</title>
+        <title>KASHAN - FULL STACK WEB DEVELOPER AND COMPUTER SYSTEMS ENGINEER </title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Engineer - Teacher - Learner</p>
+                <p class="masthead-subheading font-weight-light mb-0">Student - Learner</p>
             </div>
         </header>
         <!-- Portfolio Section-->
